--- a/projects/devpro-component-showcase/src/app/app.component.html
+++ b/projects/devpro-component-showcase/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="h-full flex-shrink-0">
       <app-side-nav></app-side-nav>
     </div>
-    <div class="h-full overflow-auto flex-grow">
+    <div class="h-full overflow-auto flex-grow px-10">
       <router-outlet></router-outlet>
     </div>
   </div>
