--- a/projects/devpro-component-showcase/src/app/app.component.html
+++ b/projects/devpro-component-showcase/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="flex-shrink-0">
     <app-top-nav></app-top-nav>
   </div>
-  <div class="flex-grow container mx-auto flex">
+  <div class="flex-grow container mx-auto flex overflow-hidden">
     <div class="h-full flex-shrink-0">
       <app-side-nav></app-side-nav>
     </div>
