Showcase color changes

--- a/projects/devpro-component-showcase/src/styles.scss
+++ b/projects/devpro-component-showcase/src/styles.scss
@@ -3,11 +3,14 @@
 @import "tailwindcss/utilities";
 
 * {
-    @apply text-gray-800;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
 .container {
     width: 1280px;
+}
+
+body {
+    @apply text-gray-800 font-sans antialiased min-h-full;
 }
