--- a/projects/devpro-component-showcase/src/app/components/top-nav/top-nav.component.html
+++ b/projects/devpro-component-showcase/src/app/components/top-nav/top-nav.component.html
@@ -1,3 +1,3 @@
-<div style="background-color:#141D25;">
-    <div class="h-16 px-6 flex items-center container mx-auto"><img class="w-24 cursor-pointer" [routerLink]="['']" src="../../../assets/img/devpro-dark.png" /></div>
+<div class="bg-white ring-1 ring-gray-900 ring-opacity-5 shadow-sm">
+    <div class="h-16 px-6 flex items-center container mx-auto"><img class="w-24 cursor-pointer" [routerLink]="['']" src="../../../assets/img/devpro.png" /></div>
 </div>
