--- a/projects/devpro-component-library/src/lib/spinner/spinner.component.html
+++ b/projects/devpro-component-library/src/lib/spinner/spinner.component.html
@@ -7,5 +7,7 @@
      [class.style2]="spinnerStyle === 'style2'"
      [class.style3]="spinnerStyle === 'style3'"
      [class.blue]="color === 'blue'"
-     [class.white]="color === 'white'">
+     [class.white]="color === 'white'"
+     [class.red]="color === 'red'"
+     [class.black]="color === 'black'">
 </div>
