--- a/projects/devpro-component-library/src/lib/calendar/calendar.component.html
+++ b/projects/devpro-component-library/src/lib/calendar/calendar.component.html
@@ -1,40 +1,37 @@
-<div class = "calendar"
-    [class.disabled]="disabled">
-    <div class = "calendar-header">
-        <!-- TODO add fancy arrow icons once files are in-->
-        <button class = "arrow" (click)="changeMonth(-1)">
-            &#x3c;
-        </button>
-        <div class = "header">
-            {{navigationMonthName}}
+<div class="calendar">
+    <div class="calendar-nav">
+      <div>
+        <div>
+          <button class="chevron" (click)="changeMonth(-1)">
+            <dp-svg name="angle-left"></dp-svg>
+          </button>
+          <div class="month">{{navigationMonthLabel}}</div>
+          <button class="chevron" (click)="changeMonth(1)">
+            <dp-svg name="angle-right"></dp-svg>
+          </button>
         </div>
-        <button class = "arrow" (click)="changeMonth(1)">
-            &#x3e;
-        </button>
-
-        <button class = "arrow" (click)="changeYear(-1)">
-            &#x3c;
-        </button>
-        <div class = "header">
-            {{navigationYear}}
+        <div>
+          <button class="chevron" (click)="changeYear(-1)">
+            <dp-svg name="angle-left"></dp-svg>
+          </button>
+          <div class="year">{{navigationYearLabel}}</div>
+          <button class="chevron" (click)="changeYear(1)">
+            <dp-svg name="angle-right"></dp-svg>
+          </button>
         </div>
-        <button class = "arrow" (click)="changeYear(1)">
-            &#x3e;
-        </button>
+      </div>
     </div>
-
     <div class="calendar-weekdays">
-        <div *ngFor="let weekdayLabel of weekdayLabels">
+      <div *ngFor="let weekdayLabel of weekdayLabels">
         <div><small>{{weekdayLabel}}</small>
         </div>
-        </div>
+      </div>
     </div>
-    <div class = "calendar-cells">
-        <div *ngFor="let cell of calendar"
-            (click)="selectDate(cell)" 
-            [class.today]="cell.today"
-            [class.selected]="cell.isoDate && cell.isoDate === value">
-            <div [ngClass]="cell.day ? 'day' : 'emptyDay'">{{cell.day ? cell.day : ''}}</div>
-        </div>
+  
+    <div class="calendar-cells">
+      <div (click)="selectDate(cell)" *ngFor="let cell of calendarCells" [class.disabled]="cell.disabled"
+        [class.today]="cell.today" [class.selected]="cell.isoDate && cell.isoDate === value">
+        <div class="day">{{cell.day ? cell.day : ''}}</div>
+      </div>
     </div>
-</div>
+  </div>
