--- a/projects/devpro-component-library/src/lib/select/select.component.html
+++ b/projects/devpro-component-library/src/lib/select/select.component.html
@@ -1,4 +1,4 @@
-<dp-popper placement="bottom" [offset]="{x:0, y:4}">
+<!-- <dp-popper placement="bottom" [offset]="{x:0, y:4}">
   <div class="dp-input px-4 h-10 flex items-center hover:bg-gray-50 duration-150 cursor-pointer" [class.disabled]="disabled" [class.error]="error">
     <div class="flex-shrink-0" *ngIf="iconBefore"></div>
     <div class="flex-grow">
@@ -16,4 +16,4 @@
       No results
     </div>
   </div>
-</dp-popper>
+</dp-popper> -->
