--- a/projects/devpro-component-showcase/src/app/components/feature-preview/feature-preview.component.html
+++ b/projects/devpro-component-showcase/src/app/components/feature-preview/feature-preview.component.html
@@ -1,5 +1,5 @@
 <div class="flex items-center justify-between">
-  <div class="text-gray-800 font-semibold text-xl flex-grow truncate">{{featureTitle}}</div>
+  <div class="text-gray-700 font-medium text-lg flex-grow truncate">{{featureTitle}}</div>
   <div class="flex-shrink-0">
     <div class="preview-toggle">
       <div class="preview-toggle-button" [class.active]="!showCode" (click)="showCode = false">
