--- a/projects/devpro-component-showcase/src/app/app.component.html
+++ b/projects/devpro-component-showcase/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen max-h-screen h-screen overflow-hidden flex flex-col bg-gray-50">
+<div class="min-h-screen max-h-screen h-screen overflow-hidden flex flex-col">
   <div class="flex-shrink-0">
     <app-top-nav></app-top-nav>
   </div>
