--- a/projects/devpro-component-library/src/lib/date-picker/date-picker.component.html
+++ b/projects/devpro-component-library/src/lib/date-picker/date-picker.component.html
@@ -1,4 +1,4 @@
-<dp-popper [offset]="{x:0, y:4}">
+<dp-popper [offset]="{x:0, y:4}" placement="bottom">
   <div class="dp-input" [class.disabled]="disabled" [class.error]="error"
     [class.focus]="focused">
     <input #ref (focusin)="handleFocus()" (focusout)="handleUnfocus()" (input)="handleInput($event)"
