--- a/projects/devpro-component-showcase/src/app/components/feature-preview/feature-preview.component.html
+++ b/projects/devpro-component-showcase/src/app/components/feature-preview/feature-preview.component.html
@@ -12,7 +12,7 @@
   </div>
 </div>
 <ng-container *ngIf="showCode; else preview">
-  <div class="mt-3 rounded-md border border-gray-200 shadow-sm overflow-hidden">
+  <div class="mt-3 rounded-md border border-gray-200 overflow-hidden">
     <div class="bg-white p-3 shadow-sm"></div>
     <div class="text-white bg-gray-800 text-sm">
       <div>
@@ -28,7 +28,7 @@
 </ng-container>
 
 <ng-template #preview>
-  <div class="mt-3 p-6 rounded-lg border border-gray-200 shadow-sm bg-white overflow-hidden">
+  <div class="mt-3 p-6 rounded-lg border border-gray-200 bg-gray-50 overflow-hidden">
     <ng-content></ng-content>
   </div>
 </ng-template>
