--- a/projects/devpro-component-library/src/lib/button/button.component.html
+++ b/projects/devpro-component-library/src/lib/button/button.component.html
@@ -1,4 +1,4 @@
-<button [class.full]="" [disabled]="disabled" [ngClass]="type">
+<button class="button" [class.full]="" [disabled]="disabled" [ngClass]="type">
   <div *ngIf="iconBefore"></div>
   <ng-content></ng-content>
   <div *ngIf="iconAfter"></div>
