--- a/projects/devpro-component-showcase/src/app/components/demos/button/button-demo.component.html
+++ b/projects/devpro-component-showcase/src/app/components/demos/button/button-demo.component.html
@@ -1,5 +1,3 @@
-<div class="mt-6 flex space-x-4">
-    <dp-button type="primary">Button</dp-button>
-    <dp-button>Button</dp-button>
-    <dp-button type="error">Button</dp-button>
-</div>
+<app-feature-preview assetName="button-demo-styles" featureTitle="Button styles">
+    <app-button-demo-styles></app-button-demo-styles>
+</app-feature-preview>
