--- a/projects/devpro-component-showcase/src/app/components/demos/date-picker/date-picker-demo.component.html
+++ b/projects/devpro-component-showcase/src/app/components/demos/date-picker/date-picker-demo.component.html
@@ -1,3 +1,3 @@
-<div class="w-60">
-    <dp-date-picker></dp-date-picker>
-</div>  
+<app-feature-preview assetName="date-picker-demo-basic" featureTitle="Basic usage">
+    <app-date-picker-demo-basic></app-date-picker-demo-basic>
+</app-feature-preview>
