--- a/projects/devpro-component-showcase/src/app/components/demos/demos.component.html
+++ b/projects/devpro-component-showcase/src/app/components/demos/demos.component.html
@@ -1,4 +1,4 @@
-<div class="mt-12 mb-24">
+<div class="mt-12 mb-24 lg:mr-24">
     <div class="text-3xl font-semibold mb-8">{{title}}</div>
     <router-outlet></router-outlet>
 </div>
