--- a/projects/devpro-component-showcase/src/app/components/demos/spinner/spinner-demo.component.html
+++ b/projects/devpro-component-showcase/src/app/components/demos/spinner/spinner-demo.component.html
@@ -1,1 +1,3 @@
-<dp-spinner [color]="'red'" [spinnerStyle]="'style3'"></dp-spinner>
+<app-feature-preview assetName="spinner-demo-basic" featureTitle="Basic usage">
+    <app-spinner-demo-basic></app-spinner-demo-basic>
+</app-feature-preview>
