--- a/projects/devpro-component-library/src/lib/spinner/spinner.component.html
+++ b/projects/devpro-component-library/src/lib/spinner/spinner.component.html
@@ -1,13 +1,5 @@
-<div class="spinner-wrapper"
-     [class.xs]="size === 'xs'"
-     [class.sm]="size === 'sm'"
-     [class.md]="size === 'md'"
-     [class.lg]="size === 'lg'"
-     [class.style1]="spinnerStyle === 'style1'"
-     [class.style2]="spinnerStyle === 'style2'"
-     [class.style3]="spinnerStyle === 'style3'"
-     [class.blue]="color === 'blue'"
-     [class.white]="color === 'white'"
-     [class.red]="color === 'red'"
-     [class.black]="color === 'black'">
-</div>
+<div class="loader" [style.width]="width">
+     <svg class="circular" viewBox="25 25 50 50">
+         <circle [class]="pathClasses"  cx="50" cy="50" r="20" fill="none" stroke-width="5" stroke-miterlimit="10" />
+     </svg>
+ </div>
