--- a/projects/devpro-component-library/src/lib/spinner/spinner.component.scss
+++ b/projects/devpro-component-library/src/lib/spinner/spinner.component.scss
@@ -1,88 +1,63 @@
-.spinner-wrapper {
-  border-radius: 9999px;
-  animation: spin 1s linear infinite; // Slow-down if needed. 1.5s?
-  @keyframes spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
+@import '../../../assets/styles/base.scss';
+
+:host{
+  display: inline-block;
+}
+
+.loader {
+  position: relative;
+  &:before {
+      content: "";
+      display: block;
+      padding-top: 100%;
   }
-  transition-timing-function: linear;
+}
 
-  //// Color ////
+.circular {
+  animation: rotate 2s linear infinite;
+  height: 100%;
+  transform-origin: center center;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.path {
+  stroke: currentColor;
+  stroke-dasharray: 1, 200;
+  stroke-dashoffset: 0;
+  animation: dash 1.5s ease-in-out infinite;
+
   &.blue {
-    border-color: rgba(59, 130, 246, 1); // Blue 500
-
-    &.style3 {
-      border-top-color: rgba(59, 130, 246, 1); // Blue-500
-    }
+    color: $blue-500;
   }
 
   &.white {
-    border-color: white;
-
-    &.style3 {
-      border-top-color: white;
-    }
+    color: $white;
   }
+}
 
-  &.red {
-    border-color: rgb(239, 68, 68); // Red 500
-
-    &.style3 {
-      border-top-color: rgba(239, 68, 68, 1); // Red-500
-    }
+@keyframes rotate {
+  100% {
+      transform: rotate(360deg);
   }
+}
 
-  &.black {
-    border-color: rgb(0, 0, 0); // Black
-
-    &.style3 {
-      border-top-color: rgb(0, 0, 0); // Black
-    }
+@keyframes dash {
+  0% {
+      stroke-dasharray: 1, 200;
+      stroke-dashoffset: 0;
   }
-
-  //// Sizes ////
-  &.xs {
-    height: 1.5rem;
-    width: 1.5rem;
-    border-width: 2px;
+  50% {
+      stroke-dasharray: 89, 200;
+      stroke-dashoffset: -35px;
   }
-
-  &.sm {
-    height: 3rem;
-    width: 3rem;
-    border-width: 2px;
-  }
-
-  &.md {
-    height: 6rem;
-    width: 6rem;
-    border-width: 2px;
-  }
-
-  &.lg {
-    height: 12rem;
-    width: 12rem;
-    border-width: 2px;
-  }
-
-  //// Styles ////
-  &.style1 {
-    border-right-color: transparent;
-    border-left-color: transparent;
-  }
-
-  &.style2 {
-    border-top-color: transparent;
-  }
-
-  &.style3 {
-    border-width: 2px;
-    border-top-width: 2px;
-    border-color: rgba(209, 213, 219, 1); // Gray 300
-    border-top-color: rgba(59, 130, 246, 1); // Blue 500
+  100% {
+      stroke-dasharray: 89, 200;
+      stroke-dashoffset: -124px;
   }
 }
