--- a/projects/devpro-component-showcase/src/app/components/demos/select/select-demo.component.html
+++ b/projects/devpro-component-showcase/src/app/components/demos/select/select-demo.component.html
@@ -1,3 +1,3 @@
-<div class="w-60">
-    <dp-select [options]="demoOptions" [formControl]="formControl"></dp-select>
-</div>
+<app-feature-preview assetName="select-demo-basic" featureTitle="Basic select">
+    <app-select-demo-basic></app-select-demo-basic>
+</app-feature-preview>
