--- a/projects/devpro-component-showcase/src/app/components/feature-preview/feature-preview.component.html
+++ b/projects/devpro-component-showcase/src/app/components/feature-preview/feature-preview.component.html
@@ -1,5 +1,5 @@
 <div class="flex items-center justify-between">
-  <div class="text-gray-700 font-medium text-lg flex-grow truncate">{{featureTitle}}</div>
+  <div class="text-gray-800 font-medium text-base flex-grow truncate">{{featureTitle}}</div>
   <div class="flex-shrink-0">
     <div class="preview-toggle">
       <div class="preview-toggle-button" [class.active]="!showCode" (click)="showCode = false">
@@ -13,22 +13,21 @@
 </div>
 <ng-container *ngIf="showCode; else preview">
   <div class="mt-3 rounded-md border border-gray-200 overflow-hidden">
-    <div class="bg-white p-3 shadow-sm"></div>
-    <div class="text-white bg-gray-800 text-sm">
-      <div>
-        <pre class="language-html rounded-b"
-          [ngStyle]="{margin: '0'}"><code [innerHTML]="this.html | prism:'html' | safeHtml"></code></pre>
-      </div>
-      <div>
-        <pre class="language-html rounded-b"
-          [ngStyle]="{margin: '0'}"><code [innerHTML]="this.typescript | prism:'javascript'"></code></pre>
-      </div>
-    </div>
+    <dp-tab-group>
+      <dp-tab [label]="assetName + '.html'" [padded]="false">
+        <pre class="language-html rounded-none"
+          [ngStyle]="{margin: '0', borderRadius:'0'}"><code [innerHTML]="this.html | prism:'html' | safeHtml"></code></pre>
+      </dp-tab>
+      <dp-tab [label]="assetName + '.ts'" [padded]="false">
+        <pre class="language-html"
+          [ngStyle]="{margin: '0', borderRadius:'0'}"><code [innerHTML]="this.typescript | prism:'javascript'"></code></pre>
+      </dp-tab>
+    </dp-tab-group>
   </div>
 </ng-container>
 
 <ng-template #preview>
-  <div class="mt-3 p-6 rounded-lg border border-gray-200 bg-gray-50 overflow-hidden">
+  <div class="mt-3 p-6 rounded-lg border bg-white">
     <ng-content></ng-content>
   </div>
 </ng-template>
