Auto stash before merge of "new-library" and "origin/new-library"

--- a/projects/devpro-component-library/src/lib/calendar/calendar.component.html
+++ b/projects/devpro-component-library/src/lib/calendar/calendar.component.html
@@ -3,20 +3,20 @@
       <div>
         <div>
           <button class="chevron" (click)="changeMonth(-1)">
-            <dp-svg name="angle-left"></dp-svg>
+            <!-- <dp-svg name="angle-left"></dp-svg> -->
           </button>
           <div class="month">{{navigationMonthLabel}}</div>
           <button class="chevron" (click)="changeMonth(1)">
-            <dp-svg name="angle-right"></dp-svg>
+            <!-- <dp-svg name="angle-right"></dp-svg> -->
           </button>
         </div>
         <div>
           <button class="chevron" (click)="changeYear(-1)">
-            <dp-svg name="angle-left"></dp-svg>
+            <!-- <dp-svg name="angle-left"></dp-svg> -->
           </button>
           <div class="year">{{navigationYearLabel}}</div>
           <button class="chevron" (click)="changeYear(1)">
-            <dp-svg name="angle-right"></dp-svg>
+            <!-- <dp-svg name="angle-right"></dp-svg> -->
           </button>
         </div>
       </div>
