--- a/projects/devpro-component-library/src/lib/select/select.component.html
+++ b/projects/devpro-component-library/src/lib/select/select.component.html
@@ -5,7 +5,7 @@
         <ng-container *ngIf="selectedOption">{{selectedOption.label}}</ng-container>
         <ng-container *ngIf="!selectedOption"><div class="placeholder">{{placeholder}}</div></ng-container>
       </div>
-      <div class="chevron"><dp-svg name="angle-down"></dp-svg></div>
+      <!-- <div class="chevron"><dp-svg name="angle-down"></dp-svg></div> -->
     </div>
   </div>
   <div class="popper-content">
