--- a/projects/devpro-component-showcase/src/app/components/feature-preview/feature-preview.component.html
+++ b/projects/devpro-component-showcase/src/app/components/feature-preview/feature-preview.component.html
@@ -3,10 +3,10 @@
   <div class="flex-shrink-0">
     <div class="preview-toggle">
       <div class="preview-toggle-button" [class.active]="!showCode" (click)="showCode = false">
-        <dp-svg name="eye"></dp-svg>Preview
+        <!-- <dp-svg name="eye"></dp-svg>Preview -->
       </div>
       <div class="preview-toggle-button" [class.active]="showCode" (click)="showCode = true">
-        <dp-svg name="code"></dp-svg>Code
+        <!-- <dp-svg name="code"></dp-svg>Code -->
       </div>
     </div>
   </div>
