--- a/projects/devpro-component-library/assets/styles/variables.scss
+++ b/projects/devpro-component-library/assets/styles/variables.scss
@@ -156,7 +156,7 @@ $border-8: 8px;
 $border-default: 1px;
 $rounded-none: 0px;
 $rounded-sm: 0.125rem;
-$rounded-default: 0.25rem;
+$rounded: 0.25rem;
 $rounded-md: 0.375rem;
 $rounded-lg: 0.5rem;
 $rounded-xl: 0.75rem;
