--- a/projects/devpro-component-library/src/lib/to-do/checkbox/checkbox.component.scss
+++ b/projects/devpro-component-library/src/lib/to-do/checkbox/checkbox.component.scss
@@ -1,11 +1,13 @@
+@import "../../../assets/styles/base.scss";
+
 input[type="checkbox"] {
   position: absolute;
   opacity: 0;
 }
 
 :host[checked='true'] .checkbox-container {
-  background-color: rgba(59, 130, 246, 1); // Blue 500
-  border-color: rgba(147, 197, 253, 1); // Blue 300
+  background-color: $blue-500; // Blue 500
+  border-color: $blue-300; // Blue 300
 
   .checkbox-svg {
     opacity: 1;
@@ -13,28 +15,28 @@ input[type="checkbox"] {
 }
 
 :host[disabled='true'] .checkbox-container {
-  background-color: rgba(156, 163, 175, 1); // Gray 400
-  border-color: rgba(209, 213, 219, 1); // Gray 300
+  background-color: $gray-400; // Gray 400
+  border-color: $gray-300; // Gray 300
   pointer-events: none;
 }
 
 :host[disabled='true'] .checkbox-label {
-  background-color: rgba(229, 231, 235, 1); // Gray 200
+  background-color: $gray-200; // Gray 200
 }
 
 :host[error='true'] .checkbox-container {
-  border-color: rgba(252, 165, 165, 1); // Red 300
+  border-color: $red-300; // Red 300
 }
 
 :host[error='true'][checked='true'] .checkbox-container {
-  background-color: rgba(239, 68, 68, 1); // Red 500
+  background-color: $red-500; // Red 500
 }
 
 .checkbox-wrapper {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
-  margin-top: 0.75rem;
+  margin-top: $m-3;
 }
 
 .checkbox-container {
@@ -43,21 +45,21 @@ input[type="checkbox"] {
   align-items: center;
   justify-content: center;
   background-color: white;
-  border-radius: 0.25rem;
-  border: 1px solid rgba(209, 213, 219, 1); // Grey 300
-  height: 1.25rem;
-  width: 1.25rem;
+  border-radius: $rounded;
+  border: 1px solid $gray-300; // Grey 300
+  height: $h-5;
+  width: $w-5;
 }
 
 .checkbox-svg {
   opacity: 0;
   fill: currentColor;
   color: white;
-  height: 1rem;
-  width: 1rem;
+  height: $h-4;
+  width: $w-4;
   pointer-events: none;
 }
 
 .checkbox-label {
-  margin-left: 0.5rem;
+  margin-left: $m-2;
 }
