Auto stash before merge of "new-library" and "origin/new-library"

--- a/projects/devpro-component-showcase/src/app/components/demos/icon/icon-demo.component.html
+++ b/projects/devpro-component-showcase/src/app/components/demos/icon/icon-demo.component.html
@@ -12,7 +12,7 @@
             *ngFor="let icon of iconList"
             class="h-28 w-28 flex flex-col items-center justify-center col-span-1 cursor-pointer text-xl"
             (click)="copyIcon(icon)">
-            <dp-svg [name]="icon"></dp-svg>
+            <!-- <dp-svg [name]="icon"></dp-svg> -->
             <span class="text-gray-500 pt-2">{{icon}}</span>
         </div>
     </div>
