--- a/projects/devpro-component-showcase/src/app/components/feature-preview/feature-preview.component.html
+++ b/projects/devpro-component-showcase/src/app/components/feature-preview/feature-preview.component.html
@@ -1,33 +1,35 @@
-<div class="flex items-center justify-between">
-  <div class="text-gray-800 font-medium text-base flex-grow truncate">{{featureTitle}}</div>
-  <div class="flex-shrink-0">
-    <div class="preview-toggle">
-      <div class="preview-toggle-button" [class.active]="!showCode" (click)="showCode = false">
-        <!-- <dp-svg name="eye"></dp-svg>Preview -->
-      </div>
-      <div class="preview-toggle-button" [class.active]="showCode" (click)="showCode = true">
-        <!-- <dp-svg name="code"></dp-svg>Code -->
+<div class="mb-10">
+  <div class="flex items-center justify-between">
+    <div class="text-gray-800 font-medium text-base flex-grow truncate">{{featureTitle}}</div>
+    <div class="flex-shrink-0">
+      <div class="preview-toggle">
+        <div class="preview-toggle-button" [class.active]="!showCode" (click)="showCode = false">
+          <dp-svg name="eye"></dp-svg>Preview
+        </div>
+        <div class="preview-toggle-button" [class.active]="showCode" (click)="showCode = true">
+          <dp-svg name="code"></dp-svg>Code
+        </div>
       </div>
     </div>
   </div>
+  <ng-container *ngIf="showCode; else preview">
+    <div class="mt-3 rounded-md border border-gray-200 overflow-hidden bg-white">
+      <dp-tab-group>
+        <dp-tab [label]="assetName + '.html'" [padded]="false">
+          <pre class="language-html rounded-none"
+            [ngStyle]="{margin: '0', borderRadius:'0'}"><code [innerHTML]="this.html | prism:'html' | safeHtml"></code></pre>
+        </dp-tab>
+        <dp-tab [label]="assetName + '.ts'" [padded]="false">
+          <pre class="language-html"
+            [ngStyle]="{margin: '0', borderRadius:'0'}"><code [innerHTML]="this.typescript | prism:'javascript'"></code></pre>
+        </dp-tab>
+      </dp-tab-group>
+    </div>
+  </ng-container>
+  
+  <ng-template #preview>
+    <div class="mt-3 p-6 rounded-lg border bg-white" [ngClass]="{'flex justify-center': center}">
+      <ng-content></ng-content>
+    </div>
+  </ng-template>
 </div>
-<ng-container *ngIf="showCode; else preview">
-  <div class="mt-3 rounded-md border border-gray-200 overflow-hidden">
-    <dp-tab-group>
-      <dp-tab [label]="assetName + '.html'" [padded]="false">
-        <pre class="language-html rounded-none"
-          [ngStyle]="{margin: '0', borderRadius:'0'}"><code [innerHTML]="this.html | prism:'html' | safeHtml"></code></pre>
-      </dp-tab>
-      <dp-tab [label]="assetName + '.ts'" [padded]="false">
-        <pre class="language-html"
-          [ngStyle]="{margin: '0', borderRadius:'0'}"><code [innerHTML]="this.typescript | prism:'javascript'"></code></pre>
-      </dp-tab>
-    </dp-tab-group>
-  </div>
-</ng-container>
-
-<ng-template #preview>
-  <div class="mt-3 p-6 rounded-lg border bg-white">
-    <ng-content></ng-content>
-  </div>
-</ng-template>
