--- a/projects/devpro-component-showcase/src/styles.scss
+++ b/projects/devpro-component-showcase/src/styles.scss
@@ -14,3 +14,12 @@
 body {
     @apply text-gray-800 font-sans antialiased min-h-full;
 }
+
+
+h2 {
+    @apply font-semibold text-2xl mb-4;
+}
+
+h3 {
+    @apply font-semibold text-lg mb-3;
+}
