--- a/projects/devpro-component-library/src/lib/checkbox/checkbox.component.html
+++ b/projects/devpro-component-library/src/lib/checkbox/checkbox.component.html
@@ -5,7 +5,7 @@
            [value]="[value]"
            [checked]="isChecked"
            [disabled]="disabled">
-    <!-- <dp-svg class="checkbox-svg" iconName="check"></dp-svg> -->
+    <dp-svg class="checkbox-svg" name="check"></dp-svg>
   </div>
 
   <span class="checkbox-label">{{ label }}</span>
