--- a/projects/devpro-component-showcase/src/app/components/demos/checkbox/checkbox-demo-basic.component.html
+++ b/projects/devpro-component-showcase/src/app/components/demos/checkbox/checkbox-demo-basic.component.html
@@ -1,4 +1,4 @@
-<dp-checkbox class="block w-48" [formControl]="formControl"></dp-checkbox>
+<dp-checkbox class="block w-48" [formControl]="formControl" label="Label"></dp-checkbox>
 
 <div class="flex flex-row">
     <div class="mt-6 pr-5">
