--- a/projects/devpro-component-showcase/src/app/components/demos/checkbox/checkbox-demo.component.html
+++ b/projects/devpro-component-showcase/src/app/components/demos/checkbox/checkbox-demo.component.html
@@ -1,3 +1,3 @@
-<app-feature-preview assetName="checkbox-demo-basic">
+<app-feature-preview assetName="checkbox-demo-basic" featureTitle="Basic usage">
     <app-checkbox-demo-basic></app-checkbox-demo-basic>
 </app-feature-preview>
