--- a/projects/devpro-component-showcase/src/app/components/demos/checkbox/checkbox-demo-basic.component.html
+++ b/projects/devpro-component-showcase/src/app/components/demos/checkbox/checkbox-demo-basic.component.html
@@ -1,13 +1,8 @@
 <dp-checkbox class="block w-48" [formControl]="formControl" label="Label"></dp-checkbox>
 
-<div class="flex flex-row">
-    <div class="mt-6 pr-5">
-        <dp-button [class.hidden]="!disabled" type="primary" (click)="enable()">Enable</dp-button>
-        <dp-button [class.hidden]="disabled" type="error" (click)="disable()">Disable</dp-button>
-    </div>
-
-    <div class="mt-6 px-5">
-        <dp-button [class.hidden]="!!error" type="primary" (click)="setError()">Set Error</dp-button>
-        <dp-button [class.hidden]="!error" type="error" (click)="clearError()">Clear Error</dp-button>
-    </div>
-</div>  
+<div class="flex space-x-3">
+    <dp-button [class.hidden]="!disabled" type="primary" (click)="enable()">Enable</dp-button>
+    <dp-button [class.hidden]="disabled" type="error" (click)="disable()">Disable</dp-button>
+    <dp-button [class.hidden]="!!error" (click)="setError()">Set Error</dp-button>
+    <dp-button [class.hidden]="!error" (click)="clearError()">Clear Error</dp-button>
+</div>
