--- a/projects/devpro-component-library/src/lib/checkbox/checkbox.component.html
+++ b/projects/devpro-component-library/src/lib/checkbox/checkbox.component.html
@@ -1,10 +1,7 @@
 <label class="checkbox-wrapper">
-  <div class="checkbox-container">
-    <input type="checkbox"
-           (click)="onClick()"
-           [value]="[value]"
-           [checked]="isChecked"
-           [disabled]="disabled">
+  <div class="checkbox-container" [class.focused]="focused">
+    <input type="checkbox" (click)="onClick()" [value]="[value]" [checked]="isChecked" [disabled]="disabled"
+      (focusin)="handleFocus()" (focusout)="handleUnfocus()">
     <dp-svg class="checkbox-svg" name="check"></dp-svg>
   </div>
 
