Alerts demo changes

--- a/projects/devpro-component-showcase/src/app/components/demos/alert/alert-demo.component.html
+++ b/projects/devpro-component-showcase/src/app/components/demos/alert/alert-demo.component.html
@@ -1,3 +1,7 @@
-<app-feature-preview assetName="alert-demo-single">
+<app-feature-preview assetName="alert-demo-single" featureTitle="Basic alert without service">
     <app-alert-demo-single></app-alert-demo-single>
+</app-feature-preview>
+
+<app-feature-preview assetName="alert-demo-multiple" featureTitle="Multiple alerts using service">
+    <app-alert-demo-multiple></app-alert-demo-multiple>
 </app-feature-preview>
